# watsonx-data-lakehouse-pipeline

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
docs/: architecture.md
notebooks/: 01_lakehouse_demo.ipynb
src/: __init__.py  config.py
src/governance/: __init__.py  lineage.py  sla_monitor.py
src/ingestion/: __init__.py  kafka_producer.py  schema_registry.py  spark_consumer.py
src/lakehouse/: __init__.py  bronze.py  gold.py  iceberg_utils.py  silver.py
src/quality/: __init__.py  expectations.py  profiler.py
tests/: __init__.py  conftest.py  test_bronze.py  test_gold.py  test_governance.py  test_quality.py  test_schema_registry.py  test_silver.py
